--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
     "name": "first-project",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://denis2301.github.io/SocialNetwork.demo",
+
     "jest": {
         "transformIgnorePatterns": [
             "node_modules/(?!(react-leaflet|@react-leaflet|d3-*|axios))"
@@ -27,7 +29,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -48,6 +52,7 @@
         ]
     },
     "devDependencies": {
+        "gh-pages": "^6.3.0",
         "jest": "^29.7.0",
         "react-test-renderer": "^18.2.0"
     }
