--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "homepage": "https://denis2301.github.io/SocialNetwork.demo",
-
     "jest": {
         "transformIgnorePatterns": [
             "node_modules/(?!(react-leaflet|@react-leaflet|d3-*|axios))"
@@ -14,6 +13,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.7.9",
+        "classnames": "^2.5.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.2",
