--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^29.5.14",
+        "@types/node": "^22.14.1",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "@types/redux-form": "^8.3.10",
         "axios": "^1.7.9",
         "classnames": "^2.5.1",
         "react": "^18.2.0",
@@ -54,6 +59,7 @@
     "devDependencies": {
         "gh-pages": "^6.3.0",
         "jest": "^29.7.0",
-        "react-test-renderer": "^18.2.0"
+        "react-test-renderer": "^18.2.0",
+        "typescript": "^5.8.3"
     }
 }
