--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/redux-form": "^8.3.10",
         "axios": "^1.7.9",
         "classnames": "^2.5.1",
+        "formik": "^2.4.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.2",
@@ -57,6 +58,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-test-renderer": "^19.1.0",
         "gh-pages": "^6.3.0",
         "jest": "^29.7.0",
         "react-test-renderer": "^18.2.0",
