--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,18 +8,19 @@
         "strict": true,
         "forceConsistentCasingInFileNames": true,
         "module": "esnext",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
         "jsx": "react-jsx",
         "baseUrl": "./",
         "paths": {
             "@/*": ["src/*"]
         },
+        "noEmit": true,
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "isolatedModules": true,
+        "typeRoots": ["./node_modules/@types", "./src"]
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "global.d.ts"],
     "exclude": ["node_modules"]
 }
+
