--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "axios": "^1.7.9",
         "classnames": "^2.5.1",
         "formik": "^2.4.6",
+        "query-string": "^9.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.2",
@@ -29,6 +30,7 @@
         "redux-form": "^8.3.10",
         "redux-thunk": "^3.1.0",
         "reselect": "^5.1.1",
+        "use-query-params": "^2.2.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
