--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
         "@types/redux-form": "^8.3.10",
+        "antd": "^5.26.1",
         "axios": "^1.7.9",
         "classnames": "^2.5.1",
         "formik": "^2.4.6",
+        "formik-antd": "^2.0.5",
+        "moment": "^2.30.1",
         "query-string": "^9.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -31,6 +34,7 @@
         "redux-thunk": "^3.1.0",
         "reselect": "^5.1.1",
         "use-query-params": "^2.2.1",
+        "uuid": "^11.1.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
